--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,11 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Link from "../layouts/Link.astro";
 ---
 
-<Layout
-  title="404 Page Not Found"
->
-  <section class="404__content">
-    <h1 class="text-5xl my-4">/404:not_found/</h1>
-    <Link href="/" target="_blank">Back to Homepage</Link>
-  </section>
+<Layout title="404 Page Not Found">
+  <h1>404: not_found</h1>
+  <Link href="/" class="back">Back to Homepage</Link>
 </Layout>
