--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -1,62 +1,50 @@
 ---
-import Seo from "./_Seo.astro";
-
 export interface Props {
   title?: string;
   description?: string;
   image?: string;
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+import { SITE_TITLE } from "../consts";
 
-// - [ ] seo integration
-// <!-- <Seo {title} {description} url={Astro.url} {image} {data} {robots} /> -->
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const {
   title,
   description,
   image = "/placeholder-post.jpg",
 } = Astro.props as Props;
+
+const seo_title = title !== SITE_TITLE ? `${title} | ${SITE_TITLE}` : title;
 ---
 
-<!-- Global Metadata -->
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<meta name="generator" content={Astro.generator} />
+<head>
+  <!-- Global Metadata -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="generator" content={Astro.generator} />
 
-<!-- Canonical URL -->
-<link rel="canonical" href={canonicalURL} />
+  <!-- Canonical URL -->
+  <link rel="canonical" href={canonicalURL} />
 
-<!-- [When lightmode breaks your favicon](https://www.youtube.com/watch?v=o5WNKVkm1HA) -->
-<link
-  rel="icon"
-  type="image/svg+xml"
-  href="/favicon.svg"
-  media="(prefers-color-scheme: dark)"
-/>
-<link
-  rel="icon"
-  type="image/svg+xml"
-  href="/favicon.svg"
-  media="(prefers-color-scheme: light)"
-/>
+  <title>{seo_title}</title>
+  <meta name="title" content={title} />
+  <meta name="description" content={description} />
 
-<!-- Primary Meta Tags -->
-<title>{title}</title>
-<meta name="title" content={title} />
-<meta name="description" content={description} />
+  <!-- tracking -->
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content={Astro.url} />
-<meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content={Astro.url} />
+  <meta property="og:title" content={title} />
+  <meta property="og:description" content={description} />
+  <meta property="og:image" content={new URL(image, Astro.url)} />
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={Astro.url} />
-<meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content={Astro.url} />
+  <meta property="twitter:title" content={title} />
+  <meta property="twitter:description" content={description} />
+  <meta property="twitter:image" content={new URL(image, Astro.url)} />
+</head>
