--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,9 +2,11 @@
 // global_style
 import "../styles/global.scss";
 
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_YEAR } from "../consts";
+
 import Head from "./Head.astro";
-import Footer from "./Footer.astro";
-import Header from "./Header.astro";
+import Link from "./Link.astro";
+import EffectGrain from "./_EffectGrain.astro";
 
 export interface Props {
   title?: string;
@@ -13,35 +15,71 @@ export interface Props {
 }
 
 const {
-  title = import.meta.env.PUBLIC_SITE_TITLE,
-  description = import.meta.env.PUBLIC_SITE_DESCRIPTION,
+  title = SITE_TITLE,
+  description = SITE_DESCRIPTION,
   image,
 } = Astro.props as Props;
 
-// const body_pathname = [{ frontpage: Astro.url.pathname == "/" }];
-
-// <!-- google font? -->
-//     <link rel="preconnect" href="https://fonts.googleapis.com" />
-//     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-//     <link
-//       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,600;0,700;1,400&display=swap"
-//       rel="stylesheet"
-//     />
+const body_page_class = [{ frontpage: Astro.url.pathname == "/" }];
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <Head {title} {description} {image} />
-  </head>
+  <Head {title} {description} {image} />
 
-  <body>
-    <Header />
+  <body class:list={["sticky-footer", body_page_class]}>
+    <header id="site-header">
+      <span id="site-title">
+        {SITE_TITLE}
+      </span>
+      <nav>
+        <Link href="/">Home</Link>
+        <Link href="/blog">Blog</Link>
+        <Link href="/work">Works</Link>
+      </nav>
+    </header>
 
-    <main id="site-main" aria-label="site-main">
+    <hr />
+
+    <main>
       <slot />
     </main>
 
-    <Footer />
+    <hr />
+
+    <footer id="site-footer">
+      <!-- codewithintent; instillmindfulness; learnandcreate -->
+      <p class="small">
+        &copy; {SITE_TITLE}
+        {SITE_YEAR} &middot; <Link class="muted" href="/rss.xml">rss</Link>
+      </p>
+      <EffectGrain />
+    </footer>
+
+    <style>
+      body.sticky-footer {
+        min-height: 100vh;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+
+        & > main {
+          flex-grow: 1;
+        }
+        & > footer {
+          margin-top: auto;
+        }
+      }
+      #site-title {
+        font-size: var(--size);
+        font-weight: bold;
+      }
+      header > nav > a {
+        margin-right: var(--size);
+      }
+      main {
+        padding: var(--size) 0;
+      }
+    </style>
   </body>
 </html>
