--- a/src/layouts/_EffectGrain.astro
+++ b/src/layouts/_EffectGrain.astro
@@ -1,31 +1,19 @@
-<div id="effect--grain"></div>
-<style>
-  body {
-    position: relative;
-  }
-  #effect--grain {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
+---
+// [noise_grainy_effect](https://www.youtube.com/watch?v=_ZFghigBmqo)
 
-    background-image: url("/images/grain-rough.jpg");
-    background-repeat: repeat;
-    mix-blend-mode: lighten;
-    user-select: none;
-    pointer-events: none;
-    z-index: 9999;
-    opacity: 0.3;
-    /* filter: brightness(0.5); */
-  }
-</style>
+// NOTE: insert component under footer to avoid breaking the primary structure
+---
+
+<svg style="display: none">
+  <filter id="grainy">
+    <feTurbulence type="fractalNoise" baseFrequency="0.608"></feTurbulence>
+    <feComposite operator="in" in2="SourceGraphic" result="monoNoise"
+    ></feComposite>
+  </filter>
+</svg>
 
 <style is:global>
-  /* noise_grainy_effect */
-  /* https://www.youtube.com/watch?v=_ZFghigBmqo */
-  html {
+  body {
     position: relative;
 
     &:after {
@@ -44,11 +32,3 @@
     }
   }
 </style>
-
-<svg>
-  <filter id="grainy">
-    <feTurbulence type="fractalNoise" baseFrequency="0.608"></feTurbulence>
-    <feComposite operator="in" in2="SourceGraphic" result="monoNoise"
-    ></feComposite>
-  </filter>
-</svg>
