--- a/src/layouts/_Pagination.astro
+++ b/src/layouts/_Pagination.astro
@@ -4,7 +4,30 @@ import Link from "./Link.astro";
 const { prevUrl, nextUrl } = Astro.props;
 ---
 
-<nav aria-label="Blog pages">
-  {prevUrl && <Link href={prevUrl}>Previous</Link>}
-  {nextUrl && <Link href={nextUrl}>Next</Link>}
+<nav aria-label="pagination">
+  {
+    prevUrl && (
+      <Link href={prevUrl} class="prev">
+        Newer
+      </Link>
+    )
+  }
+  {
+    nextUrl && (
+      <Link href={nextUrl} class="next">
+        Older
+      </Link>
+    )
+  }
 </nav>
+
+<style>
+  nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  a.next:only-child {
+    margin-left: auto;
+    margin-right: 0;
+  }
+</style>
