--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -4,7 +4,6 @@ import { getCollection, CollectionEntry } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
 import Card from "../../layouts/Card.astro";
 import Pagination from "../../layouts/_Pagination.astro";
-// import CategoryCloud from "../../layouts/_CategoryCloud.astro";
 
 import { formatBlogPosts } from "../../layouts/_Utils";
 
@@ -13,7 +12,7 @@ export async function getStaticPaths({ paginate }) {
   const formattedPosts: CollectionEntry<"blog">[] = formatBlogPosts(allPosts);
 
   return paginate(formattedPosts, {
-    pageSize: 4,
+    pageSize: 6,
   });
 }
 
@@ -21,15 +20,20 @@ const { page } = Astro.props;
 ---
 
 <Layout>
-  <section aria-label="New Blog Posts">
-    <h1>New Blog Posts</h1>
-    <ul class="grid gap-5 max-w-2xl">
-      {
-        page.data.map((post) => (
-          <Card data={post.data} url={post.slug} heading="h2" />
-        ))
-      }
-    </ul>
+  <!-- sort by tag|date -->
+
+  <section id="blog-posts">
+    {
+      page.data.map((post) => (
+        <Card data={post.data} url={post.slug} heading="h2" />
+      ))
+    }
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
   </section>
 </Layout>
+<style>
+  #blog-posts {
+    display: grid;
+    gap: var(--size);
+  }
+</style>
