--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const body_page_class = [{ frontpage: Astro.url.pathname == "/" }];
       <nav>
         <Link href="/">Home</Link>
         <Link href="/blog">Blog</Link>
-        <Link href="/work">Works</Link>
+        <!-- <Link href="/work">Works</Link> -->
       </nav>
     </header>
 
