--- a/src/layouts/Card.astro
+++ b/src/layouts/Card.astro
@@ -4,8 +4,6 @@
 import { slugify, dateToNumber } from "../layouts/_Utils";
 import Link from "./Link.astro";
 
-import Img from "./Img.astro";
-
 const { data, url, heading, classes } = Astro.props;
 
 const Heading = heading;
@@ -13,17 +11,21 @@ const Heading = heading;
 const {
   title = "",
   pubDate = "",
-  image = "",
+  // image = "",
   description = "",
   tag = "",
 } = data;
 
+const image = url;
 ---
 
-<article class:list={["card", classes]} >
-  <Img src={image.src} alt={image.description} />
-  <!-- <Img src={image} alt={`helloworld`} /> -->
-
+<article class:list={["card", classes]}>
+  <img
+    class="card-img"
+    width="92"
+    height="92"
+    src={`/assets/${image}.png`}
+  />
   <div class="content">
     <p class="meta">
       {dateToNumber(pubDate)} | {tag.join(", ")}
@@ -48,5 +50,12 @@ const {
   }
   .meta {
     font-size: var(--size-sm);
+  }
+  .title {
+    font-size: var(--h3);
+  }
+  .card-img {
+    aspect-ratio: 1/1;
+    object-fit: cover;
   }
 </style>
