--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -25,7 +25,7 @@ const { page } = Astro.props;
   <section id="blog-posts">
     {
       page.data.map((post) => (
-        <Card data={post.data} url={post.slug} heading="h2" />
+        <Card data={post.data} url={post.slug} heading="h2" image={post.slug} />
       ))
     }
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
