remove link to portfolio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 	</p>
 	<nav class="quicklinks">
 		<Link href="/blog" class="back">Explore My Blog</Link>
-		<Link href="/work" class="back">Visit My Portfolio</Link>
+		<!-- <Link href="/work" class="back">Visit My Portfolio</Link> -->
 	</nav>
 	<p>
 		<strong>Enjoy your visit and happy learning! 🚀</strong>
