readme update; add gtag;

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -49,5 +49,18 @@ const seo_title = title !== SITE_TITLE ? `${title} | ${SITE_TITLE}` : title;
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQ2S4M9E6S"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-LQ2S4M9E6S");
+  </script>
+
   <ViewTransitions />
 </head>
