--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -50,9 +50,9 @@ const seo_title = title !== SITE_TITLE ? `${title} | ${SITE_TITLE}` : title;
   <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQ2S4M9E6S"
+  <script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-LQ2S4M9E6S"
   ></script>
-  <script>
+  <script is:inline>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
       dataLayer.push(arguments);
